--- a/_chapters/01.md
+++ b/_chapters/01.md
@@ -1,4 +1,6 @@
-## Story of the Door
+---
+title: Story of the Door
+---
 
 Mr. Utterson the lawyer was a man of a rugged countenance, that was
 never lighted by a smile; cold, scanty and embarrassed in
