--- a/_chapters/02.md
+++ b/_chapters/02.md
@@ -1,4 +1,6 @@
-## Search for Mr. Hyde
+---
+title: Search for Mr. Hyde
+---
 
 That evening Mr. Utterson came home to his bachelor house in sombre
 spirits and sat down to dinner without relish. It was his custom of
