--- a/_chapters/03.md
+++ b/_chapters/03.md
@@ -1,4 +1,6 @@
-## Dr. Jekyll was Quite at Ease
+---
+title: Dr. Jekyll was Quite at Ease
+---
 
 A fortnight later, by excellent good fortune, the doctor gave one
 of his pleasant dinners to some five or six old cronies, all
