--- a/_chapters/04.md
+++ b/_chapters/04.md
@@ -1,4 +1,6 @@
-## The Carew Murder Case
+---
+title: The Carew Murder Case
+---
 
 Nearly a year later, in the month of October, 18--, London was
 startled by a crime of singular ferocity and rendered all the more
