--- a/_chapters/05.md
+++ b/_chapters/05.md
@@ -1,4 +1,6 @@
-## Incident of the Letter
+---
+title: Incident of the Letter
+---
 
 It was late in the afternoon, when Mr. Utterson found his way to
 Dr. Jekyll's door, where he was at once admitted by Poole, and
