--- a/_chapters/06.md
+++ b/_chapters/06.md
@@ -1,4 +1,6 @@
-## Remarkable Incident of Dr. Lanyon
+---
+title: Remarkable Incident of Dr. Lanyon
+---
 
 Time ran on; thousands of pounds were offered in reward, for the
 death of Sir Danvers was resented as a public injury; but Mr. Hyde
