--- a/_chapters/07.md
+++ b/_chapters/07.md
@@ -1,4 +1,6 @@
-## Incident at the Window
+---
+title: Incident at the Window
+---
 
 It chanced on Sunday, when Mr. Utterson was on his usual walk
 with Mr. Enfield, that their way lay once again through the
