--- a/_chapters/08.md
+++ b/_chapters/08.md
@@ -1,4 +1,6 @@
-## The Last Night
+---
+title: The Last Night
+---
 
 Mr. Utterson was sitting by his fireside one evening after
 dinner, when he was surprised to receive a visit from Poole.
