--- a/_chapters/09.md
+++ b/_chapters/09.md
@@ -1,4 +1,6 @@
-## Dr. Lanyon's Narrative
+---
+title: Dr. Lanyon's Narrative
+---
 
 On the ninth of January, now four days ago, I received by the
 evening delivery a registered envelope, addressed in the hand of
