--- a/_chapters/10.md
+++ b/_chapters/10.md
@@ -1,4 +1,6 @@
-## Henry Jekyll's Full Statement of the Case
+---
+title: Henry Jekyll's Full Statement of the Case
+---
 
 I was born in the year 18-- to a large fortune, endowed besides
 with excellent parts, inclined by nature to industry, fond of the
